src/test/ui/nll/issue-47470.stderr
error[E0597]: `local` does not live long enough
  --> $DIR/issue-47470.rs:27:9
   |
LL |         &local //~ ERROR `local` does not live long enough
   |         ^^^^^^ borrowed value does not live long enough
LL |     }
   |     - borrowed value only lives until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
